--- a/nginx.conf
+++ b/nginx.conf
@@ -5,20 +5,22 @@ http {
 
 upstream extractorflask {
 
-    server 127.0.0.1:5001;
+    server extractor:5001;
 
 }
 upstream modelflask {
 
-    server 127.0.0.1:5000;
+    server model-ltr:5000;
 
 }
 
 server {
-    listen 8080 default_server;
+    listen 8080;
+    # server 127.0.0.1;
 
     location /model/eval {
         proxy_pass http://modelflask/eval;
+        proxy_method POST;
     }
 
     location /model/train {
