--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     db:
-      image: mongo
+      image: mongo:latest
       ports:
       - 27017:27017
     extractor:
@@ -23,7 +23,7 @@ services:
       ports:
       - 5000:5000
     api-gateway:
-      image: nginx
+      image: nginx:latest
       volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       ports:
