change eval to predict

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,8 @@ server {
     listen 8080;
     # server 127.0.0.1;
 
-    location /model/eval {
-        proxy_pass http://modelflask/eval;
+    location /model/predict {
+        proxy_pass http://modelflask/predict;
         proxy_method POST;
     }
 
