--- a/nginx.conf
+++ b/nginx.conf
@@ -5,18 +5,17 @@ http {
 
 upstream extractorflask {
 
-    server extractor:5001;
+    server data-extractor:5001;
 
 }
 upstream modelflask {
 
-    server model-ltr:5000;
+    server model:5000;
 
 }
 
 server {
     listen 8080;
-    # server 127.0.0.1;
 
     location /model/predict {
         proxy_pass http://modelflask/predict;
