--- a/docker-compose2.yaml
+++ b/docker-compose2.yaml
@@ -3,28 +3,32 @@ services:
     db:
       image: mongo:latest
       ports:
-      - 27017:27017
-    extractor:
+        - 27017:27017
+    data-extractor:
       build:
-        dockerfile: Dockerfile.extractor
+        dockerfile: ./dockerfile/Dockerfile.extractor
       environment:
         ME_CONFIG_MONGODB_URL: ${ME_CONFIG_MONGODB_URL}
         MONGODB_NAME: ${MONGODB_NAME}
         action_url: ${action_url}
         book_url: ${book_url}
       ports:
-      - 5001:5001
-    model-ltr:
+        - 5001:5001
+      volumes:
+        - ./dataset:/usr/src/app/dataset
+    model:
       build:
-        dockerfile: Dockerfile.model
+        dockerfile: ./dockerfile/Dockerfile.model
       environment:
         ME_CONFIG_MONGODB_URL: ${ME_CONFIG_MONGODB_URL}
         MONGODB_NAME: ${MONGODB_NAME}
       ports:
-      - 5000:5000
+        - 5000:5000
     api-gateway:
       image: nginx:latest
       volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+        - ./nginx.conf:/etc/nginx/nginx.conf
       ports:
-      - 8080:8080
+        - 8080:8080
+
+
